--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,32 @@ services:
     - ./logs:/scrapyrt/project/logs
     ports:
     - "9080:9080"
+    expose:
+    - 9080
     restart: "always"
     depends_on:
     - splash
+
+#  varnish:
+#    image: eeacms/varnish
+#    ports:
+#    - "80:6081"
+#    - "6085:6085"
+#    depends_on:
+#    - scrapper
+#    environment:
+#      BACKENDS: "scrapper"
+#      BACKENDS_PORT: "9080"
+#      DNS_ENABLED: "false"
+#      DNS_TTL: 1440
+#      BACKENDS_PROBE_INTERVAL: "3s"
+#      BACKENDS_PROBE_TIMEOUT: "1s"
+#      BACKENDS_PROBE_WINDOW: "3"
+#      BACKENDS_PROBE_THRESHOLD: "2"
+#      DASHBOARD_USER: "admin"
+#      DASHBOARD_PASSWORD: "admin"
+#      DASHBOARD_SERVERS: "varnish"
+#      DASHBOARD_DNS_ENABLED: "false"
 
   test_data:
     image: nginx
